--- a/CVector/README_CVector.html
+++ b/CVector/README_CVector.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<title>REAME CVector -- API for Dynamic Arrays</title>
+<title>README CVector -- API for Dynamic Arrays</title>
 </head>
 <body bgcolor="FFFFFF">
 <font face="Arial,Helevtica,Times" size=4>
-
+<a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=247254&amp;type=5" width="210" height="62" border="0" alt="SourceForge.net Logo" /></a>
+<hr>
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
