--- a/CVector/README_CVector.html
+++ b/CVector/README_CVector.html
@@ -9,7 +9,8 @@
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
-&#169; 2008 Herbert J. Bernstein<br/>
+Release 1.0<br />
+&#169; 2008, 2009 Herbert J. Bernstein<br/>
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
