--- a/trunk/CVector/README_CVector.html
+++ b/trunk/CVector/README_CVector.html
@@ -31,7 +31,7 @@ CVector is an ANSI C implementation of dynamic arrays to provide a crude approxi
 <h4>Installation</h4>
 <p>
 The CVector package is available at <a href="http://www.sourceforge.net/projects/cvector">www.sourceforge.net/projects/cvector</a>.
-A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz>downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz</a>.
+A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz</a>.
 Later tarballs may be available.
 <P>
 When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.0.  To see the current settings for a build
