--- a/CVector/README_CVector.html
+++ b/CVector/README_CVector.html
@@ -9,8 +9,8 @@
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
-Release 1.0<br />
-8 January 2009<br />
+Release 1.0.1<br />
+13 January 2009<br />
 &#169; 2008, 2009 Herbert J. Bernstein<br/>
 <script language="javascript" type="text/javascript">
 <!-- 
@@ -27,14 +27,17 @@ You may distribute the CVector API under the <a href=lgpl.txt style="text-decora
 </center>
 <P>
 CVector is an ANSI C implementation of dynamic arrays to provide a crude approximation to the C++ vector class.
-
+<p>
+This release is a minor revision of release 1.0.0 of 8 January 2009 to update the Makefile for builds under MINGW.  There
+are no changes to the code.  The internal copy of libtool has been removed.
+<p>
 <h4>Installation</h4>
 <p>
 The CVector package is available at <a href="http://www.sourceforge.net/projects/cvector">www.sourceforge.net/projects/cvector</a>.
-A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.0.tar.gz</a>.
+A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.1.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.1.tar.gz</a>.
 Later tarballs may be available.
 <P>
-When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.0.  To see the current settings for a build
+When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.1.  To see the current settings for a build
 execute
 <p>
 make
@@ -53,22 +56,20 @@ PLEASE READ README_CVector.txt and lgpl.txt
  
  The current library link command is:
  
-   libtool --mode=link  gcc -version-info 1:0:1 -release 1.0 -rpath /home/faculty/bernsteh/lib
+   libtool --mode=link  gcc -version-info 1:0:1 -release 1.0.1 -rpath /usr/local/lib
  
  The current library local, dynamic and static build commands are:
  
    libtool --mode=link gcc -g -O2  -Wall -ansi -pedantic -I.
-   libtool --mode=link gcc -g -O2  -Wall -ansi -pedantic -dynamic -I /home/faculty/bernsteh/include -L/home/faculty/ber
-nsteh/lib
-   libtool --mode=link gcc -g -O2  -Wall -ansi -pedantic -static -I /home/faculty/bernsteh/include -L/home/faculty/bern
-steh/lib
+   libtool --mode=link gcc -g -O2  -Wall -ansi -pedantic -shared -I /usr/local/include
+   libtool --mode=link gcc -g -O2  -Wall -ansi -pedantic -static -I /usr/local/include
  
  Before installing the CVector library and example programs, check
  that the install directory and install commands are correct:
  
  The current values are :
  
-   <i>your home directory</i> 
+   /usr/local
    libtool --mode=install cp 
     
  
@@ -94,9 +95,9 @@ steh/lib
 <p>
 If these settings need to be changed, edit Makefile.  On some systems, e.g. Mac OS X, the default
 libtool is not appropriate.  In that case you should install a recent version of libtool.  The
-CVector kit has been tested with libtool versions 1.3.5 and 1.5.4.  If the system libtool is
-not to be used, define the variable LIBTOOL to be the path to the libtaol executable, e.g.
-in bash
+CVector kit has been tested with libtool versions 1.3.5, 1.5.4 and 2.2.6.  If the system libtool is
+not to be used, define the variable LIBTOOL to be the path to the libtool executable, e.g.
+in bash.  On MINGW, use of gcc 4 and libtool 2.2.6 are highly recommended.
 <p>
 export LIBTOOL=$HOME/bin/libtool
 <p>
