Pick up missed mod for macro to get an element Undo prior switch from -shared to -dynamic, which is not general -- HJB

--- a/CVector/README_CVector.html
+++ b/CVector/README_CVector.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="FFFFFF">
 <font face="Arial,Helevtica,Times" size=4>
-<a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=247254&amp;type=5" width="210" height="62" border="0" alt="SourceForge.net Logo" /></a>
+<a href="http://sourceforge.net/projects/cvector"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=247254&amp;type=13" width="120" height="30" alt="Get CVector at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>
 <hr>
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
@@ -50,7 +50,7 @@ which should give the following information:
 PLEASE READ README_CVector.txt and lgpl.txt
  
  Before making the CVector library and example programs, check
- that the chosen settings are corr
+ that the chosen settings are correct
  
  The current compile command is:
  
@@ -58,7 +58,7 @@ PLEASE READ README_CVector.txt and lgpl.txt
  
  The current library link command is:
  
-   libtool --mode=link  gcc -version-info 1:0:1 -release 1.0.2 -rpath /usr/local/lib
+   libtool --mode=link  gcc -version-info 2:0:0 -release 1.0.3 -rpath /usr/local/lib
  
  The current library local, dynamic and static build commands are:
  
@@ -251,7 +251,7 @@ See the test program <a href="CVectorBasicTest.c">CVectorBasicTest.c</a>
 
 <hr>
 <font size="2">
-Updated 7 July 2009<br />
+Updated 8 July 2009<br />
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
