--- a/CVector/README_CVector.html
+++ b/CVector/README_CVector.html
@@ -9,9 +9,9 @@
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
-Release 1.0.3<br />
-7 July 2009<br />
-&#169; 2008, 2009 Herbert J. Bernstein<br/>
+Release 1.0.4<br />
+26 November 2014<br />
+&#169; 2008, 2009, 2014 Herbert J. Bernstein<br/>
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
@@ -28,7 +28,8 @@ You may distribute the CVector API under the <a href=lgpl.txt style="text-decora
 <P>
 CVector is an ANSI C implementation of dynamic arrays to provide a crude approximation to the C++ vector class.
 <p>
-This release is a minor revision of release 1.0.0 of 8 January 2009 to update the Makefile for builds under MINGW,
+Release 1.0.4 adds a CMakeLists.txt file to the kit and changes the test program to allow normal output to be written to a specified file.
+Release 1.0.3 was is a minor revision of release 1.0.0 of 8 January 2009 to update the Makefile for builds under MINGW,
 on 26 February 2009 to add the macro CVectorElementAt, and on 7 July 2009 to change the  macro to CVECTOR_FAR and
 similarly change the macros that handle memmove and memset.  There
 are no changes to the code.  The internal copy of libtool has been removed.
@@ -36,10 +37,10 @@ are no changes to the code.  The internal copy of libtool has been removed.
 <h4>Installation</h4>
 <p>
 The CVector package is available at <a href="http://www.sourceforge.net/projects/cvector">www.sourceforge.net/projects/cvector</a>.
-A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.3.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.3.tar.gz</a>.
+A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.4.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.4.tar.gz</a>.
 Later tarballs may be available.
 <P>
-When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.3.  To see the current settings for a build
+When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.4.  To see the current settings for a build
 execute
 <p>
 make
@@ -58,7 +59,7 @@ PLEASE READ README_CVector.txt and lgpl.txt
  
  The current library link command is:
  
-   libtool --mode=link  gcc -version-info 2:0:0 -release 1.0.3 -rpath /usr/local/lib
+   libtool --mode=link  gcc -version-info 2:0:0 -release 1.0.4 -rpath /usr/local/lib
  
  The current library local, dynamic and static build commands are:
  
@@ -251,7 +252,7 @@ See the test program <a href="CVectorBasicTest.c">CVectorBasicTest.c</a>
 
 <hr>
 <font size="2">
-Updated 8 July 2009<br />
+Updated 26 November 2014<br />
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
