Adjust README for GitHub in 1.0.4.1 release -- HJB

--- a/README_CVector.html
+++ b/README_CVector.html
@@ -9,8 +9,8 @@
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
-Release 1.0.4<br />
-26 November 2014<br />
+Release 1.0.4.1<br />
+1 May 2018<br />
 &#169; 2008, 2009, 2014 Herbert J. Bernstein<br/>
 <script language="javascript" type="text/javascript">
 <!-- 
@@ -28,6 +28,7 @@ You may distribute the CVector API under the <a href=lgpl.txt style="text-decora
 <P>
 CVector is an ANSI C implementation of dynamic arrays to provide a crude approximation to the C++ vector class.
 <p>
+Release 1.0.4.1 is a move from Sourceforge to Github.
 Release 1.0.4 adds a CMakeLists.txt file to the kit and changes the test program to allow normal output to be written to a specified file.
 Release 1.0.3 was is a minor revision of release 1.0.0 of 8 January 2009 to update the Makefile for builds under MINGW,
 on 26 February 2009 to add the macro CVectorElementAt, and on 7 July 2009 to change the  macro to CVECTOR_FAR and
@@ -36,11 +37,9 @@ are no changes to the code.  The internal copy of libtool has been removed.
 <p>
 <h4>Installation</h4>
 <p>
-The CVector package is available at <a href="http://www.sourceforge.net/projects/cvector">www.sourceforge.net/projects/cvector</a>.
-A source tarball is available at <a href="http://downloads.sourceforge.net/cvector/CVector-1.0.4.tar.gz">downloads.sourceforge.net/cvector/CVector-1.0.4.tar.gz</a>.
-Later tarballs may be available.
+The CVector package is available on Github at <a href="https://github.com/yayahjb/cvector">https://github.com/yayahjb/cvector</a>. 
 <P>
-When the source tarball is dowloaded and unpacked, you should have a directory CVector-1.0.4.  To see the current settings for a build
+To see the current settings for a build
 execute
 <p>
 make
@@ -252,7 +251,7 @@ See the test program <a href="CVectorBasicTest.c">CVectorBasicTest.c</a>
 
 <hr>
 <font size="2">
-Updated 26 November 2014<br />
+Updated 1 May 2018<br />
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
