Update README -- HJB

--- a/README_CVector.html
+++ b/README_CVector.html
@@ -9,9 +9,9 @@
 <h3 align="center">CVector -- ANSI C API for Dynamic Arrays</h3>
 <P>
 <center>
-Release 1.0.4.1<br />
-1 May 2018<br />
-&#169; 2008, 2009, 2014 Herbert J. Bernstein<br/>
+Release 1.0.5<br />
+21 Jan 2022<br />
+&#169; 2008, 2009, 2014, 2022 Herbert J. Bernstein<br/>
 <script language="javascript" type="text/javascript">
 <!-- 
       var name = "yaya";
@@ -28,6 +28,7 @@ You may distribute the CVector API under the <a href=lgpl.txt style="text-decora
 <P>
 CVector is an ANSI C implementation of dynamic arrays to provide a crude approximation to the C++ vector class.
 <p>
+Release 1.0.5 is a clean-up of the Makefile
 Release 1.0.4.1 is a move from Sourceforge to Github.
 Release 1.0.4 adds a CMakeLists.txt file to the kit and changes the test program to allow normal output to be written to a specified file.
 Release 1.0.3 was is a minor revision of release 1.0.0 of 8 January 2009 to update the Makefile for builds under MINGW,
